# cgwork3

./: .gitignore  CMakeLists.txt
include/: camera.hpp  image.hpp  math.hpp  model.hpp  rasterizer.hpp  shader.hpp
src/: image.cpp  main.cpp  model.cpp  rasterizer.cpp  shader.cpp
